# AAProject

./: CMakeLists.txt  DoubleStackVec.hpp  main.cpp  start_test.py  typedefs.hpp
NUUTILA_SCC2/: Nuutila_scc2.hpp
NUUT_FIND_SCC2/: Nuut_find_scc2.cpp  Nuut_find_scc2.hpp  nuut_find_scc2_main.cpp
PEA_FIND_SCC3/: Pea_find_scc3.cpp  Pea_find_scc3.hpp  pea_find_scc3_main.cpp
PEA_FIND_SCC3_OLD/: Pea_find_scc3_old.cpp  Pea_find_scc3_old.hpp  Pea_find_scc3_old_main.cpp
TARJ_FIND_SCC1/: Tarj_find_scc1.cpp  Tarj_find_scc1.hpp  tarj_find_scc1_main.cpp
utilities/: DoubleStack.hpp  DoubleStackVec.hpp  graph_generator.cpp  typedefs.hpp
utilities/get_peaks/: __init__.py  get_peaks.py  testGetPeaks.py
